k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digital-arvsskifte
  labels:
    name: digital-arvsskifte
    environment: production
